--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,8 @@
    <meta charset="utf-8">
    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
          rel="stylesheet">
+   <link href="https://fonts.googleapis.com/css?family=Roboto"
+         rel="stylesheet">
    <title>FitnessTracker</title>
    <base href="/">
 
